[package]
name = "bme-sensors"
version = "0.1.0"
authors = ["Nelson Chan <chakflying@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = "0.4"

[build-dependencies]
bindgen = "0.63"
cc = "1.0"
