[package]
name = "bme-sensors"
version = "0.1.0"
authors = ["Nelson Chan <chakflying@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme68x-rust = { git = "https://github.com/chakflying/bme68x-rust" }
embedded-hal = "0.2.7"
linux-embedded-hal = "0.3"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
spin_sleep = "1.1.1"

[dependencies.ctrlc]
version = "3.2.5"
features = ["termination"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "clock"]

[build-dependencies]
bindgen = "0.64.0"
